--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -2,7 +2,7 @@
   outline: solid red;
   margin: 90px auto 0;
   padding: 0;
-  background-image: url(../russian-travel/img/backgroundS.jpg);
+  background-image: url(../../img/cover-trains.jpg);
   background-size: 100%;
   max-width: 1184px;
   max-height: 740px;
