--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -10,7 +10,15 @@
   max-width: 720px;
   max-height: 200px;
 }
-@media screen and (max-width: 320px){
+@media screen and (min-width: 768px){
+  .lead__title{
+    font-weight: 900;
+    font-size: 96px;
+    line-height: 100px;
+    text-align: center;
+  }
+}
+@media screen and (min-width: 320px){
   .lead__title{
     font-weight: 900;
     font-size: 40px;
