--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -6,3 +6,18 @@
   margin: 0;
   padding: 0;
 }
+@media screen and (max-width: 1024px){
+  .page{
+    max-width: 1024px;
+  }
+}
+@media screen and (max-width: 768px){
+  .page{
+    max-width: 768px;
+  }
+}
+@media screen and (max-width: 320px){
+  .page{
+    max-width: 320px;
+  }
+}
