--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -7,7 +7,6 @@
   grid-template-rows: repeat(3, 1fr);
   gap: 16px;
   max-width: 1184px;
-  max-height: 671px;
   grid-template-rows: max-content;
 }
 @media screen and (max-width: 1024px) {
@@ -16,30 +15,27 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, 1fr);
     max-width: 928px;
-    max-height: 942px;
     grid-template-rows: max-content;
     gap: 14px;
   }
 }
-@media screen and (max-width: 768px){
+@media screen and (min-width: 768px){
   .photo-grid{
     margin: 88px auto 0;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(6, 1fr);
     max-width: 720px;
-    max-height: 1664px;
     grid-template-rows: max-content;
     gap: 16px;
   }
 }
-@media screen and (max-width: 320px){
+@media screen and (min-width: 320px){
   .photo-grid{
     margin: 64px 16px 0 16px;
     display: grid;
     grid-template-columns: 1fr;
     max-width: 288px;
-    max-height: 2724px;
     gap: 12px;
   }
 }
