--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -19,7 +19,7 @@
     gap: 14px;
   }
 }
-@media screen and (min-width: 768px){
+@media screen and (max-width: 768px){
   .photo-grid{
     margin: 88px auto 0;
     display: grid;
@@ -30,7 +30,7 @@
     gap: 16px;
   }
 }
-@media screen and (min-width: 320px){
+@media screen and (max-width: 320px){
   .photo-grid{
     margin: 64px 16px 0 16px;
     display: grid;
