--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -18,7 +18,7 @@
     grid-template-columns: 47.414% 49.14%;
   }
 }
-@media screen and (min-width: 768px){
+@media screen and (max-width: 768px){
   .place{
     grid-column-gap: 28px;
     margin: 0 0 73px 0;
@@ -26,7 +26,7 @@
     grid-template-columns: 47.22% 48.89%;
   }
 }
-@media screen and (min-width: 320px){
+@media screen and (max-width: 320px){
   .place{
     margin: 0 0 50px 0;
     display: grid;
