--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -21,6 +21,12 @@
     min-height: 480px;
   }
 }
+@media screen and (max-width: 600px){
+  .cover__link{
+    max-width: 630px;
+    max-height: 250px;
+}
+}
 @media screen and (max-width: 320px){
   .cover__link{
     max-width: 320px;
