--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,5 +1,4 @@
 .cover__title{
-  outline: solid red;
   padding: 245px 0 0 0;
   margin: 0 auto 32px;
   color: #FFFFFF;
@@ -11,7 +10,7 @@
   max-width: 560px;
   color: white;
 }
-@media screen and (min-width: 1024px){
+@media screen and (max-width: 1024px){
   .cover__title{
     padding-top: 195px;
   }
@@ -24,6 +23,18 @@
     font-size: 72px;
     line-height: 76px;
     text-align: center;
+  }
+}
+@media screen and (max-width: 760px){
+  .cover__title{
+    margin: 0 auto 0;
+    padding: 33px 0 0 0;
+    font-size: 32px;
+    font-weight: 900;
+    line-height: 35px;
+    letter-spacing: 0em;
+    text-align: center;
+    max-width: 288px;
   }
 }
 @media screen and (max-width: 320px){
