--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -4,6 +4,13 @@
   display: flex;
   gap: 18px;
 }
+@media screen and (max-width: 600px){
+  .footer__links{
+    flex-direction: column;
+    gap: 32px 0;
+    margin-left: 16px;
+  }
+}
 @media screen and (max-width: 320px){
   .footer__links{
     flex-direction: column;
