--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,5 +1,4 @@
 .footer{
-  outline: solid red;
   margin: 92px auto 24px;
   padding: 0;
   display: flex;
@@ -15,6 +14,13 @@
   .footer{
     margin: 88px auto 24px;
     max-width: 720px;
+  }
+}
+@media screen and (max-width:600px){
+  .footer{
+    margin: 64px 0 0 0 ;
+    flex-direction: column;
+    justify-content: baseline;
   }
 }
 @media screen and (max-width: 320px){
