--- a/blocks/intro/__lists/intro__lists.css
+++ b/blocks/intro/__lists/intro__lists.css
@@ -1,6 +1,16 @@
 .intro__lists{
-  outline: solid red;
   margin: 0;
   padding: 0;
   list-style-type:none;
+  max-width: 690px;
+}
+@media screen and (max-width: 768px){
+  .intro__lists{
+    max-width: 720px;
+  }
+}
+@media screen and (max-width: 320px){
+  .intro__lists{
+    max-width: 288px;
+  }
 }
