--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,5 +1,4 @@
 .intro__text{
-  outline: solid red;
   margin: 40px 0 33px 0;
   padding: 0;
   font-size: 16px;
@@ -7,4 +6,15 @@
   line-height: 26px;
   letter-spacing: 0em;
   text-align: left;
+  max-width: 690px;
+}
+@media screen and (max-width: 768px){
+  .intro__text{
+    max-width: 720px;
+  }
+}
+@media screen and (max-width: 320px){
+  .intro__text{
+    max-width: 288px;
+  }
 }
