--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,5 +1,4 @@
 .intro__title{
-  outline: solid red;
   margin: 0;
   padding: 0;
   font-size: 54px;
@@ -7,12 +6,21 @@
   line-height: 58px;
   letter-spacing: 0em;
   text-align: left;
+  max-width: 690px;
+}
+
+@media screen and (max-width: 768px){
+  .intro__title{
+    max-width: 720px;
+
+  }
 }
 @media screen and (max-width: 320px){
   .intro__title{
     font-weight: 900;
     font-size: 32px;
     line-height: 35px;
-/* or 109% */
+    max-width: 288px;
+
   }
 }
