--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,8 +1,7 @@
 .intro{
-  outline: solid red;
-  margin: 92px 0 0 148px;
+  margin: 92px auto 0;
   padding: 0;
-  max-width: 690px;
+  max-width: 984px;
   display: block;
 }
 @media screen and (max-width: 1024px){
@@ -16,6 +15,12 @@
     max-width: 720px;
     margin-left: 24px;
     margin-top: 88px;
+  }
+}
+@media screen and (max-width: 600px){
+  .intro{
+    max-width: 300px;
+    margin: 64px auto 0;
   }
 }
 @media screen and (max-width: 320px){
