--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,5 +1,4 @@
 .lead__title{
-  outline: solid red;
   margin: 0 auto;
   padding: 0;
   font-size: 96px;
@@ -7,18 +6,26 @@
   line-height: 100px;
   letter-spacing: 0em;
   text-align: center;
-  max-width: 720px;
-  max-height: 200px;
+  max-width: 690px;
 }
-@media screen and (min-width: 768px){
+@media screen and (max-width: 768px){
   .lead__title{
     font-weight: 900;
     font-size: 96px;
     line-height: 100px;
     text-align: center;
+    max-width: 720px;
   }
 }
-@media screen and (min-width: 320px){
+@media screen and (max-width: 760px){
+  .lead__title{
+    font-weight: 900;
+    font-size: 40px;
+    line-height: 44px;
+    text-align: center;
+  }
+}
+@media screen and (max-width: 320px){
   .lead__title{
     font-weight: 900;
     font-size: 40px;
