--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,6 +1,5 @@
 .lead{
-  outline: solid red;
-  margin: 56px 148px 0;
+  margin: 56px auto 0;
   padding: 0;
   max-width: 984px;
   display: block;
@@ -16,9 +15,3 @@
     margin:48px 0;
   }
 }
-/*@media screen and (max-width: 320px){
-  .lead{
-    margin-top:48px;
-
-  }
-}*/
