--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,5 +1,4 @@
 .photo-grid{
-  outline: solid red;
   margin: 92px auto 0;
   padding: 0;
   display: grid;
@@ -30,9 +29,18 @@
     gap: 16px;
   }
 }
+@media screen and (max-width: 600px){
+  .photo-grid{
+    margin: 64px auto 0;
+    display: grid;
+    grid-template-columns: 1fr;
+    max-width: 288px;
+    gap: 12px;
+  }
+}
 @media screen and (max-width: 320px){
   .photo-grid{
-    margin: 64px 16px 0 16px;
+    margin: 64px auto 0;
     display: grid;
     grid-template-columns: 1fr;
     max-width: 288px;
