--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -1,6 +1,5 @@
 .place__paragraphs{
-  outline: solid red;
-  margin: 0;
+  margin: 0 auto 0;
   padding: 0;
   display: flex;
   flex-direction: column;
@@ -17,6 +16,7 @@
     gap:25px 0;
   }
 }
+
 @media screen and (max-width: 320px){
   .place__paragraphs{
     margin: 0 auto 0;
