--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,5 +1,4 @@
 .place__title{
-  outline: solid red;
   margin: 0;
   padding: 0;
   font-size: 72px;
@@ -23,6 +22,17 @@
     line-height: 46px;
     /* identical to box height, or 110% */
     max-width: 97%;
+  }
+}
+@media screen and (max-width: 600px){
+  .place__title{
+    max-width: 288px;
+    margin-left: 16px;
+    font-size: 32px;
+    font-weight: 900;
+    line-height: 35px;
+    letter-spacing: 0em;
+    text-align: left;
   }
 }
 @media screen and (max-width: 320px){
