--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,5 +1,4 @@
 .place__website{
-  outline: solid red;
   margin: 0;
   padding: 0;
   display: flex;
@@ -11,6 +10,14 @@
 {
   .place__website{
     max-width: 456px;
+}
+}
+@media screen and (max-width: 600px)
+{
+  .place__website{
+    max-width: 288px;
+    margin-left: 16px;
+    gap: 12px;
 }
 }
 @media screen and (max-width: 320px)
