--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -16,7 +16,13 @@
   .places{
     margin:88px auto 0;
     max-width: 720px;
-
+}
+}
+@media screen and (max-width: 600px)
+{
+  .places{
+    margin: 64px auto;
+    max-width: 320px;
 }
 }
 @media screen and (max-width: 320px)
