--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,24 +1,24 @@
 .cover{
   margin: 92px auto 0;
   padding: 0;
-  background-image: url(../../img/cover-trains.jpg);
-  background-size: 100%;
+  background-image: url(../../images/cover-trains.jpg);
+  background-size: cover;
   max-width: 1184px;
-  max-height: 740px;
+  min-height: 740px;
   background-repeat: no-repeat;
 }
 @media screen and (max-width: 1220px){
   .cover{
     margin: 92px auto 0;
     max-width: 1024px;
-    max-height: 640px;
+    min-height: 640px;
   }
 }
 @media screen and (max-width: 768px){
   .cover{
     display: block;
     max-width: 768px;
-    max-height: 480px;
+    min-height: 480px;
     margin-top: 90px;
     margin-left: 0;
     margin-right: 0;
@@ -28,13 +28,13 @@
   .cover{
     margin: 66px auto 0;
     max-width: 630px;
-    max-height: 250px;
+    min-height: 250px;
   }
 }
 @media screen and (max-width: 320px){
   .cover{
     margin: 66px auto 0;
     max-width: 320px;
-    max-height: 200px;
+    min-height: 200px;
   }
 }
