--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -5,12 +5,17 @@
   font-size: 24px;
   font-weight: 400;
   line-height: 28px;
-}
 
+}
+.header__lang-link:nth-child(2n){
+  text-decoration: none;
+}
+.header__lang-link:hover{
+  opacity: 0.8;
+}
 @media screen and (max-width: 320px){
   .header__lang-link{
     font-size: 18px;
-    font-weight: 400;
     line-height: 20px;
   }
 }
