--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -8,28 +8,15 @@
   text-align: center;
   max-width: 690px;
 }
-@media screen and (max-width: 768px){
+@media screen and (max-width: 970px){
   .lead__title{
-    font-weight: 900;
-    font-size: 96px;
-    line-height: 100px;
-    text-align: center;
     max-width: 720px;
   }
 }
-@media screen and (max-width: 760px){
+@media screen and (max-width: 700px){
   .lead__title{
-    font-weight: 900;
     font-size: 40px;
     line-height: 44px;
-    text-align: center;
-  }
-}
-@media screen and (max-width: 320px){
-  .lead__title{
-    font-weight: 900;
-    font-size: 40px;
-    line-height: 44px;
-    text-align: center;
+    max-width: 288px;
   }
 }
