--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -12,6 +12,11 @@
 }
 @media screen and (max-width: 970px){
   .lead{
+    margin:48px auto 0;
+  }
+}
+@media screen and (max-width: 320px){
+  .lead{
     margin:48px 0;
   }
 }
