--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -5,15 +5,14 @@
   flex-direction: column;
   align-self: end;
   gap: 12px;
+  display: inline-block
 }
-@media screen and (max-width: 970px)
-{
+@media screen and (max-width: 970px){
   .place__website{
     max-width: 456px;
 }
 }
-@media screen and (max-width: 700px)
-{
+@media screen and (max-width: 700px){
   .place__website{
     max-width: 288px;
     margin-left: 16px;
