--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,46 +1,29 @@
 .place{
-  margin: 0 0 80px 0;
+  margin: 92px auto 0;
   padding: 0;
-  display: grid;
-  grid-template-columns: 46.75% 49.19%;
+  list-style-type:none;
   max-width: 984px;
-  grid-template-rows:max-content;
-  grid-row-gap: 48px;
-  grid-column-gap: 40px;
 }
-.place:last-child{
-  margin-bottom: 0;
-}
-@media screen and (max-width: 1220px){
+@media screen and (max-width: 1024px){
   .place{
-    grid-column-gap: 32px;
-    grid-template-columns: 47.414% 49.14%;
-  }
+    margin: 90px auto 0;
+    max-width: 928px;
+}
 }
 @media screen and (max-width: 970px){
   .place{
-    grid-column-gap: 28px;
-    margin: 0 0 73px 0;
+    margin:88px auto 0;
     max-width: 720px;
-    grid-template-columns: 47.22% 48.89%;
-  }
+}
 }
 @media screen and (max-width: 700px){
   .place{
-    margin: 0 auto 50px;
-    display: grid;
-    grid-template-columns: 320px;
-    grid-row-gap: 32px;
-    grid-template-rows:min-content;
-  }
+    max-width: 288px;
+    margin: 64px auto;
+}
 }
 @media screen and (max-width: 320px){
   .place{
-    margin: 0 0 50px 0;
-    display: grid;
-    grid-template-columns: 320px;
-    grid-row-gap: 32px;
-    min-width: 320px;
-    grid-template-rows:min-content;
-  }
+    margin: 64px 0;
+}
 }
