--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,23 +1,16 @@
 .photo-grid__item{
   margin: 0;
   padding: 0;
-  max-width: 284px;
+  max-width: 100%;
   max-height: 213px;
 }
 @media screen and (max-width: 1220px) {
   .photo-grid__item{
-    max-width: 300px;
     max-height: 225px;
   }
 }
 @media screen and (max-width: 970px) {
   .photo-grid__item{
-    max-width: 352px;
     max-height: 264px;
-  }
-}
-@media screen and (max-width: 700px) {
-  .photo-grid__item{
-    max-width: 288px;
   }
 }
