--- a/blocks/place/__item/place__item.css
+++ b/blocks/place/__item/place__item.css
@@ -6,21 +6,21 @@
   max-width: 984px;
   grid-template-rows:max-content;
   grid-row-gap: 48px;
-  grid-column-gap: 40px;
+  grid-column-gap: 4.06%;
 }
 .place__item:last-child{
   margin-bottom: 0;
 }
 @media screen and (max-width: 1220px){
   .place__item{
-    grid-column-gap: 32px;
+    grid-column-gap: 3.446%;
     grid-template-columns: 47.414% 49.14%;
   }
 }
 @media screen and (max-width: 970px){
   .place__item{
     margin: 0 0 73px 0;
-    grid-column-gap: 28px;
+    grid-column-gap: 3.89%;
     max-width: 720px;
     grid-template-columns: 47.22% 48.89%;
   }
@@ -29,7 +29,7 @@
   .place__item{
     margin: 0 auto 50px;
     grid-row-gap: 32px;
-    grid-template-columns: 80%;
+    grid-template-columns: 100%;
     grid-template-rows:min-content;
     max-width: 600;
 
