--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,11 +1,8 @@
 .place__website{
   margin: 0;
   padding: 0;
-  display: flex;
-  flex-direction: column;
   align-self: end;
-  gap: 12px;
-  display: inline-block
+  display: inline-block;
 }
 @media screen and (max-width: 970px){
   .place__website{
