--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -4,9 +4,11 @@
   max-width: 1184px;
   min-height: 740px;
   align-items: center;
+  background-color: rgba(42, 44, 47, 0.3);
+}
+.cover__link:hover{
   background-color: rgba(42, 44, 47, 0.8);
 }
-
 @media screen and (max-width: 1220px){
   .cover__link{
     max-width: 1024px;
